writing done for submission. also presentation done

--- a/writeup/appendix_tsl.tex
+++ b/writeup/appendix_tsl.tex
@@ -1,6 +1,6 @@
 \section{Appendix: Two-sided logit}
 
-If we assume that the $\epsilon_{0ij}$ have independent, standard Gumbel distributions, the probability that official $j$ will make an offer to firm $i$ is:
+If we assume that the $\epsilon_{0ij}$ have independent, standard Gumbel distributions, the probability that official $j$ will make an offer to firm $i$ is:\footnote{Modeling the error term as a Gumbel random variable rather than a normal random variable greatly simplifies the closed-form likelihood while not changing the result substantially \citep{Maddala1986}.}
 
 \begin{align}
 Pr(o_{ij} = 1) &= \frac{\exp(\beta_j x_i)}{1 + \exp(\beta_j x_i)}
