--- a/writeup/rd_private_benefit.tex
+++ b/writeup/rd_private_benefit.tex
@@ -1,12 +1,13 @@
 \subsection{Project 2: ``Price'' of private benefit---cost of bribing for foreign firms}
+\label{sec:rd_private_benefit}
 
 As discussed in \Cref{sec:theory_budget_constraint_slope_and_intercept}, when the ``price'' of private benefits is high (i.e. it is costly for the firm to offer the official private benefits), the official would choose a bundle that has fewer private benefits.
 
-This theoretical claim generates many substantive predictions that we can test, each involving a factor that affects the cost of bribing for firms. For example, foreign firms that come from a corrupt home country may have more experience with bribing and thus would incur less information cost if they bribe.
+This theoretical claim generates many testable predictions, each involves a factor that affects the cost of bribing for firms. For example, foreign firms that come from a corrupt home country may have more experience with bribing and thus would incur less information cost if they bribe.
 
-Here I focus on the Phase 3 (Enforcement) of the OECD Anti-Bribery Convention (ABC) as an exogenous increase in the cost of bribing for firms from member countries. In December 1997, all members of OECD and an additional five non-members, accounting for nearly 61\% of world trade, signed the ABC. The ABC criminalizes the bribery of foreign public officials and upholds its principles with a peer-monitoring system, in which member countries visit and review one another's legislation and implementation. According to legal experts, these reports are often quite harsh and effective in shaming countries into improving their practices \citep{Tyler2011}.
+I argue that the OECD Anti-Bribery Convention (ABC) makes it expensive for firms from member countries to bribe. In December 1997, all members of OECD and an additional five non-members, accounting for nearly 61\% of world trade, signed the ABC. The ABC criminalizes the bribery of foreign public officials and upholds its principles with a peer-monitoring system, in which member countries visit and review one another's legislation and implementation. According to legal experts, these reports are often quite harsh and effective in shaming countries into improving their practices \citep{Tyler2011}. Therefore, member countries have diligently tightened their legal framework and prosecuted offenders. For a firm that bribes abroad, the ABC raises the cost of bribe by increasing both the probability and the consequence of getting caught.
 
-Important for my research design, in December 2009 the OECD's Working Group on Bribery (WGB) annouced that following Phase 1 and 2 (Evaluation and Assessment) there would be a Phase 3 (Enforcement). The goal of Phase 3 is to continually monitor countries' anti-bribery practices and to exhort inactive enforcers. Noticeably, Phase 3 also removed a previous exception that allowed firms to make ``small facilitation payment'' \citep{Strauss2013}. Researchers have argued that following the announcement of Phase 3, member countries ramped up enforcement to avoid a negative review, and causing their firms to reduce bribery abroad \citep{Malesky2015b}. 
+Important for my design, in December 2009 the OECD's Working Group on Bribery (WGB) announced that following Phase 1 and 2 (Evaluation and Assessment) there would be a Phase 3 (Enforcement). The goal of Phase 3 is to continually monitor countries' anti-bribery practices and to exhort inactive enforcers. Noticeably, Phase 3 also removes a previous exception that allowed firms to make ``small facilitation payment'' \citep{Strauss2013}. Researchers argue that following the announcement of Phase 3, member countries have ramped up enforcement to avoid a negative review. Therefore, firms from member countries have reduced their bribery abroad \citep{Malesky2015b}. 
 
 In sum, I hypothesize that
 
@@ -20,9 +21,8 @@ In addition,
 After the Phase 3 (Enforcement) of OECD's Anti-Bribery Convention, firms from member countries with stronger enforcement have more spillover and fewer bribes than firms from member countries with weaker enforcement.
 \end{hyp}
 
-To test the effect of the ABC, I use data from an annual survey of FDI firms in Vietnam, which is an ideal empirical setting for several reasons. First, Vietnam attracts FDI from a wide range of countries, including both member and non-member countries of the ABC. Second, given that FDI to Vietnam only accounts for a small fraction of ABC countries' total foreign investment, it is plausible that Vietnam is not a major factor driving the initiation of Phase 3. Therefore, the announcement of Phase 3 serves as an exogenous shock to the cost of bribery for firms from ABC member countries. With these firms being reluctant to offer bribes, we expect officials to become uninterested in extracting private benefits from them. Post 2009, they would be attractive only for their developmental impact, and we should observe them having more spillover effect.
+To test the effect of the ABC, I use the case of Vietnam, which is an ideal empirical setting for several reasons. First, Vietnam attracts FDI from a wide range of countries, including both member and non-member countries of the ABC. Second, given that FDI to Vietnam only accounts for a small fraction of ABC countries' total foreign investment, it is plausible that Vietnam is not a major factor driving the initiation of Phase 3. Therefore, the announcement of Phase 3 serves as an exogenous shock to the cost of bribery for firms from ABC member countries. With these firms being reluctant to offer bribes, we expect officials to become uninterested in extracting private benefits from them. Post 2009, firms from ABC member countries would be attractive only for their developmental impact, and we should observe them having more spillover effect.
 
-With 2009 as an exogenous shock we have a difference-in-difference design. First, we estimate the difference in spillover between ABC and non-ABC firms, pre-2009. We then find the same difference in spillover post-2009. Subtracting these two differences, we can estimate the effect of corruption on the level of spillover.\footnote{An alternative design looks at the difference between ABC and non-ABC firms that \textit{enter} Vietnam pre- and post-2009. This design will have fewer firms in the sample but could be more appropriate if we think that the spillover-bribe bundle is negotiated at the time firms enter Vietnam and is hard to change later, even with the ABC coming into effect. If so, the change in level of spillover and bribe is caused by the change in the official's selection of firms instead of the adjustment in behaviors of existing firms after 2009.} To operationalize the strength of enforcement among member countries, I use \citet{Heimann2013}'s assessment of the OECD ABC progress.
+Using ABC Phase 3 in 2009 as an exogenous shock, we have a difference-in-difference design. First, we estimate the difference in spillover between ABC and non-ABC firms, pre-2009. We then find the same difference in spillover post-2009. Subtracting these two differences, we can estimate the effect of corruption on the level of spillover.\footnote{An alternative design looks at the difference between ABC and non-ABC firms that \textit{enter} Vietnam pre- and post-2009. This design will have fewer firms in the sample but could be more appropriate if we think that the spillover-bribe bundle is negotiated at the time firms enter Vietnam and is hard to change later, even with the ABC coming into effect. If so, the change in level of spillover and bribe is caused by the change in the official's selection of firms instead of the adjustment in behaviors of existing firms after 2009.} To operationalize the strength of enforcement among member countries, I use \citet{Heimann2013}'s assessment of the OECD ABC progress.
 
-
-This project also takes advantage of the list experiment by \citet{Malesky2015} to measure the level of bribery. Indeed, asking directly about firms' experience with corruption is unlikely to get an accurate answer due to sensitivity bias \citep{Coutts2011}. Researchers, including the ES team, often address this problem by framing the question about the experience with corruption of ``firms like yours.'' However, with this technique, firms may not read between the lines and actually answer about the experience of others \citep{Ahart2004}. The unmatched count technique circumvents these issues by not forcing firms to incriminate themselves with corruption.
+This project also takes advantage of the list experiment by \citet{Malesky2015} to measure the level of bribery. Indeed, asking directly about firms' experience with corruption is unlikely to get an accurate answer due to sensitivity bias \citep{Coutts2011}. Researchers, including the ES team, often address this problem by framing the question about the experience with corruption of ``firms like yours.'' However, with this technique, firms may not read between the lines and actually answer about the experience of others \citep{Ahart2004}. The unmatched count technique circumvents these issues by not forcing firms to incriminate themselves with corruption. Therefore, our estimate of the level of corruption would be unbiased.
