--- a/writeup/time_line.tex
+++ b/writeup/time_line.tex
@@ -2,7 +2,7 @@ The prospectus currently has four projects, anticipating that at least one would
 
 \subsection{Two-sided logit model}
 \begin{itemize}
-\item Obtain the PCI data (\textbf{done})
+\item Obtain the PCI data. \textbf{done}
 \item Obtain the Bureau of Economic Analysis' (BEA) database of US FDI (\textbf{contacted Duke librarian and the BEA}). It solely depends on whether the BEA gives graduate student on-site access to the data (high uncertainty). \textbf{January 2016}
 \item Implement the EM algorithm for TSL model (high uncertainty, given that I'll code this up myself and EM models always have the possibility of not converging). \textbf{December 2016}
 \end{itemize}
@@ -27,7 +27,7 @@ Given the nature of elite surveys, this project has the most uncertainty overall
 
 \subsection{Instrumental variable}
 \begin{itemize}
-\item Obtain World Bank Enterprise Survey data. \textit{done}
+\item Obtain World Bank Enterprise Survey data. \textbf{done}
 \item Obtain the BEA's data on FDI into the US. \text{contacted Duke librarian and the BEA}. This project depends on whether the BEA gives me on-site access to the confidential, firm-level data (high uncertainty). \textbf{January 2016}
 \item Create the instrumental variable by measuring spillover effect by sector for FDI in the US. \textbf{February 2017}
 \item Analyze and finish the chapter. \textbf{April 2017}
