--- a/writeup/AnhLe_proposal.tex
+++ b/writeup/AnhLe_proposal.tex
@@ -59,6 +59,8 @@
 \begin{document}
 \maketitle
 
+\tableofcontents
+
 \section{Empirical Puzzle}
 \input{empirical_puzzle}
 
@@ -75,6 +77,8 @@
 
 \section{Research Design}
 \label{sec:research_design}
+
+\input{rd_roadmap}
 \input{measuring_spillover}
 \input{rd_potential_for_spillover}
 \input{rd_private_benefit}
