--- a/writeup/measuring_spillover.tex
+++ b/writeup/measuring_spillover.tex
@@ -1,5 +1,5 @@
 \subsection{Measuring the main dependent variable: spillover effect}
-\label{sec:measure_spillover}
+\label{sec:rd_measure_spillover}
 
 \subsubsection*{Measuring spillover indirectly}
 
@@ -8,16 +8,8 @@ Similar to the endogenization of technological change in growth theory, many res
 These channels are:
 \begin{itemize}
 	\item imitation:  private firms may reverse engineer a production or management technique \citep{Wang1992}, which is facilitated by backward linkage between local and foreign firms \citep{Javorcik2004}. This motivates my first measure of spillover effect: \% of private firms that participate in contracts with foreign firms.
-	\item competition: similar to the effect of competition from arm's length trade on productivity, the presence of foreign firms in the domestic market put pressure on local firms to reduce inefficiency \citep{Glass2002}.
-	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This motivates my second measure of spillover effect: \% of domestic firms that export.
-	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers.
+\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This motivates my second measure of spillover effect: \% of domestic firms that export.
 \end{itemize}
-
-Among these channels, the \textit{imitation} and \textit{export demonstration} channels form the theoretical basis of my two proxy measurements of spillover:
-\begin{enumerate}
-\item frequency of contracts between foreign and domestic firms,
-\item percentage of domestic firms engaging in export.
-\end{enumerate}
 
 \subsubsection*{Measuring spillover directly}
 
