--- a/writeup/preliminary_evidence.tex
+++ b/writeup/preliminary_evidence.tex
@@ -1,4 +1,4 @@
-I present some stylized facts that motivate the puzzle and the hypothesized link between FDI and corruption:
+In this section, I present some stylized facts that motivate the puzzle and the hypothesized link between FDI and corruption:
 
 \begin{itemize}
 	\item The spillover effect of FDI on growth is highly variable. For example, FDI is found to be growth-enhancing in East Asia, but not in Latin America \citep{Zhang2001}. Similarly, the effect of FDI on domestic investment also varies across countries and regions. FDI is found to crowd in investment in some countries (e.g. Ghana, Senegal, South Korea, Pakistan, Thailand, etc.) but crowd out in others \citep{Agosin2005}.
